# KWS_on_ESP32-S3-EYE

./: CMakeLists.txt  README.md  capture_serial_audio_data.py  sdkconfig  sdkconfig.default  sdkconfig.old
main/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  globals.cpp  inference.cpp  inference.h  keyword_spotting.h  main.cpp  mfcc_processing.cpp  mfcc_processing.h  model_data.h  timing.cpp  timing.h
python_scripts_for_training/: KWS_ETL.ipynb  KWS_model_training.ipynb  KWS_tflite_conversion.ipynb  KWS_visualizations.ipynb  README.md  fine_tuning.py  model_architectures.py  model_training.py  resource_monitoring.py  test_energy_measurement.py  tflite_conversion.py
